<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context=".StopAfstandActivity$PlaceholderFragment"
    android:id="@+id/stopAfstand">

    <TextView android:text="@string/SelectAfstand" android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/snelheid" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/snelheidtxt"
        android:layout_below="@+id/snelheid"
        android:layout_alignParentStart="true"
        android:layout_alignEnd="@+id/snelheid" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/reactietijd"
        android:layout_below="@+id/snelheidtxt"
        android:layout_alignParentStart="true"
        android:layout_marginTop="43dp"
        android:text="@string/ReactieTijd" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/reactietijdtxt"
        android:layout_below="@+id/reactietijd"
        android:layout_alignParentStart="true"
        android:layout_alignEnd="@+id/snelheidtxt" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="Selecteer het wegtype"
        android:id="@+id/wegtypelbl"
        android:layout_centerVertical="true"
        android:layout_alignParentStart="true" />

    <RadioGroup
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/wegtypelbl"
        android:layout_alignParentStart="true"
        android:id="@+id/radioGroup">

        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/droogRadioButton"
            android:id="@+id/droogRadioButton"
            android:checked="false" />

        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/natRadioButton"
            android:id="@+id/NatradioButton"
            android:checked="false" />
    </RadioGroup>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/stopafstand"
        android:id="@+id/ButtonStopAfstand"
        android:layout_below="@+id/radioGroup"
        android:layout_centerHorizontal="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/stopafstandResponse"
        android:id="@+id/textView"
        android:layout_below="@+id/ButtonStopAfstand"
        android:layout_alignParentStart="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/stopAfstandIstxt"
        android:layout_below="@+id/textView"
        android:layout_alignParentStart="true" />

</RelativeLayout>
